Fixed progress bar overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
   --sn-toast-gap: 16px;
   --sn-toast-font-size: 0.875rem;
   --sn-toast-line-height: 1.5;
-  --sn-toast-padding: 14px 16px 14px 16px;
+  --sn-toast-padding: 14px 16px 16px 16px;
   --sn-toast-text-color: #334155;
   --sn-toast-border-radius: 6px;
   --sn-toast-box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
@@ -152,6 +152,10 @@
 }
 
 .sn-progress-bar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   will-change: transform, width;
   height: var(--sn-progress-bar-height);
   background-color: var(--sn-progress-bar-color);
