--- a/website/src/app.css
+++ b/website/src/app.css
@@ -35,7 +35,7 @@ body {
   --sn-toast-border-radius: 6px;
   --sn-toast-font-size: 0.875rem;
   --sn-toast-line-height: 1.5;
-  --sn-toast-padding: 14px 16px 14px 16px;
+  --sn-toast-padding: 14px 16px 16px 16px;
   --sn-toast-text-color: #334155;
   --sn-toast-box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
     rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
@@ -169,6 +169,10 @@ body {
 }
 
 .sn-progress-bar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   will-change: transform, width;
   height: var(--sn-progress-bar-height);
   background-color: var(--sn-progress-bar-color);
